css/default.scss
--- 
---

body {
  display: grid;
  grid-template-areas:
    "header header header header"
    ". article article .";
  grid-template-rows: 20% 1fr;
}

header {
  grid-area: header;
  display: grid;
  grid-template-areas: "hamburger name name .";
  justify-content: space-around;
  border-bottom: 1px solid #bebebe;
  z-index: 2;
  -moz-box-shadow: 3px 3px 13px 0.1px rgba(0, 0, 0, 0.1);
  -webkit-box-shadow: 3px 3px 13px 0.1px rgba(0, 0, 0, 0.1);
  box-shadow: 3px 3px 13px 0.1px rgba(0, 0, 0, 0.1);

  span#icon-hamburger {
    grid-area: hamburger;
    margin-top: 5px;

    &:hover {
      cursor: pointer;
    }
  }

  #title {
    grid-area: name;
    padding: 10px;
    margin-bottom: 0px;
    justify-self: center;
    & > a {
      font-weight: 100;
      color: black;

      &:hover {
        text-decoration: none;
      }
    }
  }
}

article {
  grid-area: article;
  padding: 15px 25px;
}

aside {
  grid-area: sidebar;
  display: none;
  background-color: #f9f9f9;
}

.hamburger {
  height: 25px;
  width: 25px;
  padding: 10px;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                supported by Chrome, Edge, Opera and Firefox */
}

#topics a {
  color: black;
  font-weight: 600;
  margin-bottom: 5px;
  padding: 3px 5px 5px 8px;

  &:hover {
    background-color: #e9e9e9;
    color: black;
    padding: 3px 5px 5px 8px;
    border-radius: 3px;
    text-decoration: none;
  }

  &:visited {
    color: black;
  }
}

.highlighter-rouge {
  max-width: calc(100vw - 50px);
}

@media (min-width: 1025px) {
  body {
    grid-template-areas:
      "header header header header header"
      "sidebar . article article .";
    grid-template-columns: 20% 10% 1fr 1fr 10%;
  }

  header {
    grid-template-areas: "name . . .";
    justify-content: normal;

    span#icon-hamburger {
      display: none;
    }

    h2 {
      justify-self: center;
    }
  }

  #topics {
    display: flex;
    flex-direction: column;
    padding: 20px;
  }

  aside {
    word-break: break-word;
    border-right: 1px solid #bebebe;
    display: grid;
    grid-template-rows: 85% 15%;

    & #ref {
      display: flex;
      padding: 10px;
      justify-content: space-evenly;
      align-items: center;
      border-top: 1px solid #cecece;
      grid-row: 2;

      .icon {
        height: 60px;
        display: inline-block;

        * {
          height: 100%;
          display: inherit;
        }

        svg {
          fill: #6f6f6f;
        }
      }
    }
  }
}

